# ETL_Crypto

./: .env  .gitignore  README.md  pyproject.toml
code/: .env  Extract.py  Transform.py  api_test.py
data/data_raw/: data.json
data/data_raw/year=2026/month=2/day=09/: data_02-32-55_bitcoin.json  data_02-33-11_ethereum.json  data_02-33-28_solana.json  data_02-33-49_binancecoin.json  data_02-34-05_cardano.json  data_02-43-11_bitcoin.json  data_02-43-27_ethereum.json  data_02-43-43_solana.json  data_02-43-59_binancecoin.json  data_02-44-15_cardano.json  data_21-59-04_bitcoin.json  data_21-59-25_ethereum.json  data_21-59-42_solana.json  data_21-59-58_binancecoin.json  data_22-00-14_cardano.json  data_22-48-04_bitcoin.json  data_22-48-20_ethereum.json  data_22-48-36_solana.json  data_22-48-52_binancecoin.json  data_22-49-08_cardano.json
infra_terraform/: catalog.tf  crawler.tf  iam.tf  main.tf  s3.tf  terraform.tfstate.backup
